# desktopSidekick

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  png2hex.sh
src/: fsm.h  sprites.h  utils.cpp  utils.h
